<?xml version="1.0" encoding="utf-8"?>
<input-method xmlns:android="http://schemas.android.com/apk/res/android"
    android:supportsSwitchingToNextInputMethod="true"
    android:settingsActivity="com.smartboard.app.MainActivity">
    <subtype
        android:label="@string/subtype_english"
        android:imeSubtypeLocale="en_US"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=en_US" />
    <subtype
        android:label="@string/subtype_bangla"
        android:imeSubtypeLocale="bn_BD"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=bn_BD" />
    <subtype
        android:label="@string/subtype_hindi"
        android:imeSubtypeLocale="hi_IN"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=hi_IN" />
    <subtype
        android:label="@string/subtype_arabic"
        android:imeSubtypeLocale="ar"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=ar" />
    <subtype
        android:label="@string/subtype_urdu"
        android:imeSubtypeLocale="ur_PK"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=ur_PK" />
    <subtype
        android:label="@string/subtype_spanish"
        android:imeSubtypeLocale="es_ES"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=es_ES" />
    <subtype
        android:label="@string/subtype_french"
        android:imeSubtypeLocale="fr_FR"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=fr_FR" />
    <subtype
        android:label="@string/subtype_german"
        android:imeSubtypeLocale="de_DE"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=de_DE" />
</input-method>
